--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.18.1",
     "mqtt": "^5.14.1"
   },
