--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.5.1",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
+    "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.1.1",
     "recharts": "^3.3.0"
   },
