--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.18.1",
     "mqtt": "^5.14.1"
