--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "axios": "^1.13.1",
+    "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
     "react-d3-speedometer": "^3.1.1",
