--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,10 +7,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:github":"set BUILD_TARGET=github&& vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build:github",
     "deploy": "gh-pages -d dist"
+
   },
   "dependencies": {
     "axios": "^1.13.2",
