--- a/backend/package.json
+++ b/backend/package.json
@@ -11,13 +11,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.18.1",
-    "mqtt": "^5.14.1"
+    "mqtt": "^5.14.1",
+    "node-cron": "^4.2.1"
   },
   "keywords": []
 }
