--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:github":"set BUILD_TARGET=github&& vite build",
+    "build:github": "set BUILD_TARGET=github&& vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build:github",
     "deploy": "gh-pages -d dist"
-
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -23,7 +22,8 @@
     "react-chartjs-2": "^5.3.1",
     "react-d3-speedometer": "^3.1.1",
     "react-dom": "^19.1.1",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
